--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
             <h2 class="text-center">We only have 5 tables! Book your seat before they all are gone!</h2>
             <br>
             <div class="text-center">
-                <a href="tables.html"><button type="button" class="btn btn-lg btn-primary">View Tables</button></a>
-                <a href="reserve.html"><button type="button" class="btn btn-lg btn-danger">Make Reservation</button></a>
+                <a href="tables"><button type="button" class="btn btn-lg btn-primary">View Tables</button></a>
+                <a href="reserve"><button type="button" class="btn btn-lg btn-danger">Make Reservation</button></a>
             </div>
         </div>
     <footer class="footer">
