fixed .html files

--- a/reserve.html
+++ b/reserve.html
@@ -19,7 +19,7 @@
     <br>
     <div class="text-center">
         <a href="tables"><button type="button" class="btn btn-lg btn-primary">View Tables</button></a>
-        <a href="index"><button type="button" class="btn btn-lg btn-danger">Home</button></a>
+        <a href="/"><button type="button" class="btn btn-lg btn-danger">Home</button></a>
     </div>
 </div>
 <div class="row">
