--- a/tables.html
+++ b/tables.html
@@ -22,8 +22,8 @@
         <br>
 
         <div class="text-center">
-            <a href="reserve.html"><button type="button" class="btn btn-lg btn-danger">Make Reservation</button></a>
-            <a href="index.html"><button type="button" class="btn btn-lg btn-primary">Home</button></a>
+            <a href="reserve"><button type="button" class="btn btn-lg btn-danger">Make Reservation</button></a>
+            <a href="/"><button type="button" class="btn btn-lg btn-primary">Home</button></a>
         </div>
     </div>
 
